--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
 
   # Unique IDs
   uuid: ^4.2.1
+  flutter_riverpod: ^2.6.1
+  go_router: ^15.1.2
+  intl: ^0.20.2
+  shared_preferences: ^2.5.3
+  workmanager: ^0.9.0+3
+  home_widget: ^0.8.0
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
